--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Cícero</title>
 
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+
     <link rel="icon" href="assets/logo1.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"defer></script>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -371,12 +378,12 @@
             </div>
 
             <div id="cGrid2">
-                <form action="">
-                    <input type="text" id="nameIP" placeholder="Nome:" class="labrada-regular" required>
-                    <input type="email" placeholder="Email:" class="labrada-regular" required>
-                    <textarea name="" id="messageIP" placeholder="Escreva uma mensagem..." class="labrada-regular"
-                        required></textarea>
-                    <input type="submit" id="submitBtn" value="E N V I A R">
+                <form method="post" id="contactForm" action="">
+                    <input type="text" id="nameIP" placeholder="Nome:" class="labrada-regular" maxlength="60" required>
+                    <input type="email" id="emailIP" placeholder="Email:" class="labrada-regular" required>
+                    <input type="text" id="subjectIP" placeholder="Assunto:" class="labrada-regular" required>
+                    <textarea name="" id="messageIP" placeholder="Escreva uma mensagem..." class="labrada-regular" required></textarea>
+                    <button type="submit" id="submitBtn">E N V I A R</button>
                 </form>
             </div>
         </div>
